fixed bug in Gruntfile and wrapped Karla fontface in quotes

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,4 +1,4 @@
-$fonts: Karla, "Helvetica Neue", Helvetica, sans-serif;
+$fonts: "Karla", "Helvetica Neue", Helvetica, sans-serif;
 $font-size: 16px;
 
 $primary-color: #C4B6CF;
